------------------------------------------------------
Version 1.10.2 - 2.2.5
------------------------------------------------------
Additions
- Added shift right click to directly open the configurable inventory of a backpack.

Changes
- Added ability to right click to open a backpack directly from *any* inventory instead of just backpack inventories.
- Made eternity upgrade cheaper.

Bug Fixes
- Fixed localization for compression upgrade.
- Fixed recipe for compression upgrade.
------------------------------------------------------
Version 1.10.2 - 2.2.4
------------------------------------------------------
Additions
- Add basic achievements (more to come soon).
- Added a logo to IronBackpacks' entry in the "Mods" page that can be accessed from the main screen.
- Added fancy effect to my (gr8pefish's) backpack. Mwahaha, developer privileges xD

Changes
- None

Bug Fixes
- Fix all types of arrows being restocked with the upgrade.
- Fix ghost slot not taking in the *exact* item.
- Fix an anvil not modifying a backpack under any circumstances.
------------------------------------------------------
Version 1.10.2 - 2.2.3
------------------------------------------------------
Additions
- Added informational hover button in alternate inventory to display information about a backpack (useful for equipped backpacks, where you can't easily check it out).
- Added ability to press 'enter' to rename a backpack instead of mandating clicking the button.
- Added another command for forcing removal of an equipped backpack (not quite as destructive as the delete command), also for admin purposes.

Changes
- Rebalanced a couple recipes (and made all of them more integrated with the OreDictionary).
- Restocking upgrade now works when firing an arrow as well.

Bug Fixes
- Fix backpack rendering poorly in player's inventory screen.
------------------------------------------------------
Version 1.10.2 - 2.2.2
------------------------------------------------------
Additions
- None
