@@ -1,9 +1,8 @@
 To Do:
 
     NOW:
-        Add in shift right click functionality
-        Add it all as an upgrade
-
+        Add right click ability as an upgrade
+        Improve message for 'open and then close again'
 
     Misc Ideas:
         Tooltip for storage emphasis shows how much space?
