@@ -1,5 +1,6 @@
 package gr8pefish.ironbackpacks.commands;
 
+import gr8pefish.ironbackpacks.capabilities.player.PlayerDeathBackpackCapabilities;
 import gr8pefish.ironbackpacks.capabilities.player.PlayerWearingBackpackCapabilities;
 import gr8pefish.ironbackpacks.network.NetworkingHandler;
 import gr8pefish.ironbackpacks.network.client.ClientCurrentPackMessage;
@@ -24,7 +25,6 @@ import java.util.List;
 
 public class IronBackpacksCommands extends CommandBase {
 
-    private final String DELETE_EQUIPPED = "deleteEquippedBackpack";
     private final String FORCE_REMOVE_EQUIPPED = "forceRemoveEquippedBackpack";
 
     @Nonnull
@@ -36,7 +36,7 @@ public class IronBackpacksCommands extends CommandBase {
     @Nonnull
     @Override
     public String getCommandUsage(ICommandSender sender) {
-        return "/ib <"+DELETE_EQUIPPED+"|"+FORCE_REMOVE_EQUIPPED+"> [player]"; //ToDo: Add backup and restore commands eventually
+        return "/ib "+FORCE_REMOVE_EQUIPPED+" [player]"; //ToDo: Add backup and restore commands eventually
     }
 
     @Override
@@ -47,41 +47,7 @@ public class IronBackpacksCommands extends CommandBase {
     @Override
     public void execute(MinecraftServer server, ICommandSender sender, String[] params) throws CommandException {
         if (params.length > 0 && params.length <= 2) {
-            if (params[0].equalsIgnoreCase(DELETE_EQUIPPED)) {
-                if (params.length == 2) { //name supplied
-                    try {
-                        EntityPlayerMP playerMP = getPlayer(server, sender, params[1]);
-
-                        //reset on the server
-                        PlayerWearingBackpackCapabilities.reset(playerMP);
-
-                        //send to client
-                        NetworkingHandler.network.sendTo(new ClientEquippedPackMessage(null), playerMP);
-                        NetworkingHandler.network.sendTo(new ClientCurrentPackMessage(null), playerMP);
-
-                        //notify with message
-                        sender.addChatMessage(new TextComponentString(TextUtils.localizeEffect("chat.ironbackpacks.command.deletedEquippedPack")+" "+playerMP.getName()+"."));
-
-                    } catch (Exception e) {
-                        Logger.warn("Couldn't process Iron Backpacks command to delete the user's backpack!");
-                    }
-                } else { //do it for whoever did the command
-                    try {
-                        //reset on the server
-                        PlayerWearingBackpackCapabilities.reset((EntityPlayer) sender.getCommandSenderEntity());
-
-                        //send to client
-                        NetworkingHandler.network.sendTo(new ClientEquippedPackMessage(null), (EntityPlayerMP) sender.getCommandSenderEntity());
-                        NetworkingHandler.network.sendTo(new ClientCurrentPackMessage(null), (EntityPlayerMP) sender.getCommandSenderEntity());
-
-                        //notify with message
-                        sender.addChatMessage(new TextComponentString(TextUtils.localizeEffect("chat.ironbackpacks.command.deletedYourEquippedPack")));
-
-                    } catch (Exception e) {
-                        Logger.warn("Couldn't process Iron Backpacks command to delete this user's backpack!");
-                    }
-                }
-            } else if (params[0].equalsIgnoreCase(FORCE_REMOVE_EQUIPPED)) {
+            if (params[0].equalsIgnoreCase(FORCE_REMOVE_EQUIPPED)) {
                 if (params.length == 2) { //name supplied
                     try {
                         EntityPlayerMP playerMP = getPlayer(server, sender, params[1]);
@@ -100,7 +66,10 @@ public class IronBackpacksCommands extends CommandBase {
                         playerMP.setItemStackToSlot(EntityEquipmentSlot.OFFHAND, stack);
 
                         //remove backpack on server
-                        PlayerWearingBackpackCapabilities.setEquippedBackpack(playerMP, null);
+                        PlayerWearingBackpackCapabilities.reset(playerMP);
+
+                        //reset death properties just in case
+                        PlayerDeathBackpackCapabilities.reset(playerMP);
 
                         //send to client
                         NetworkingHandler.network.sendTo(new ClientEquippedPackMessage(null), playerMP);
@@ -130,7 +99,10 @@ public class IronBackpacksCommands extends CommandBase {
                         player.setItemStackToSlot(EntityEquipmentSlot.OFFHAND, stack);
 
                         //remove backpack on server
-                        PlayerWearingBackpackCapabilities.setEquippedBackpack(player, null);
+                        PlayerWearingBackpackCapabilities.reset(player);
+
+                        //reset death properties just in case
+                        PlayerDeathBackpackCapabilities.reset(player);
 
                         //send to client
                         NetworkingHandler.network.sendTo(new ClientEquippedPackMessage(null), (EntityPlayerMP) sender.getCommandSenderEntity());
@@ -154,7 +126,7 @@ public class IronBackpacksCommands extends CommandBase {
     public List<String> getTabCompletionOptions(MinecraftServer server, ICommandSender sender, String[] args, @Nullable BlockPos pos) {
         List<String> tabCompletion = new ArrayList<String>();
         if (args.length <= 1) //no name, match string
-            tabCompletion.addAll(getListOfStringsMatchingLastWord(args, DELETE_EQUIPPED, FORCE_REMOVE_EQUIPPED));
+            tabCompletion.addAll(getListOfStringsMatchingLastWord(args, FORCE_REMOVE_EQUIPPED));
         else //match name
             tabCompletion.addAll(getListOfStringsMatchingLastWord(args, server.getAllUsernames()));
         return tabCompletion;
